--- a/workspace/publy-backend/build.gradle
+++ b/workspace/publy-backend/build.gradle
@@ -30,14 +30,10 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
-  runtimeOnly 'org.postgresql:postgresql'
+  runtimeOnly 'com.h2database:h2'
 
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'org.springframework.graphql:spring-graphql-test'
-
-  testImplementation 'org.testcontainers:junit-jupiter'
-  testImplementation 'org.testcontainers:postgresql'
-
 
   implementation 'org.commonmark:commonmark:0.18.1'
 
