--- a/workspace/publy-backend/src/main/resources/application.properties
+++ b/workspace/publy-backend/src/main/resources/application.properties
@@ -2,9 +2,11 @@ server.port=8090
 
 ## -- Database --
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:postgresql://localhost:8442/publy_db
-spring.datasource.username=klaus
-spring.datasource.password=secretpw
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 ## -- Logging --
 spring.output.ansi.enabled=always
