API Summit, use H2 as database for workspace

--- a/workspace/publy-backend/src/main/resources/application.properties
+++ b/workspace/publy-backend/src/main/resources/application.properties
@@ -2,7 +2,9 @@ server.port=8090
 
 ## -- Database --
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:${user.dir}/.h2/publy-db
+spring.sql.init.mode=always
+spring.h2.console.enabled=true
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
