--- a/workspace/steps/99_complete/src/main/resources/application.properties
+++ b/workspace/steps/99_complete/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 server.port=8090
-
 ## -- Database --
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:postgresql://localhost:8442/publy_db
-spring.datasource.username=klaus
-spring.datasource.password=secretpw
-
+spring.datasource.url=jdbc:h2:file:${user.dir}/.h2/publy-db
+spring.sql.init.mode=always
+spring.h2.console.enabled=true
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 ## -- Logging --
 spring.output.ansi.enabled=always
 # use 'debug' for sql logging
@@ -14,11 +16,9 @@ logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
 logging.level.org.springframework.graphql=INFO
 logging.level.graphql=INFO
-
 ## -- GraphQL --
 spring.graphql.graphiql.enabled=true
 spring.graphql.graphiql.path=/
 spring.graphql.websocket.path=/graphql
-
 publy.userservice.url=http://localhost:8091
 
