--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -2,6 +2,21 @@ on:
   - push
 
 jobs:
+  build-backend:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./app
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install JDK17
+        uses: actions/setup-java@v3
+        with:
+          distribution: "temurin" # See 'Supported distributions' for available options
+          java-version: "17"
+      - run: ./gradle build
+
   build-frontend:
     runs-on: ubuntu-latest
     defaults:
