--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           distribution: "temurin" # See 'Supported distributions' for available options
           java-version: "17"
-      - run: ./gradle build
+      - run: ./gradlew build
 
   build-frontend:
     runs-on: ubuntu-latest
