GH Actions: build FE

--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -43,3 +43,5 @@ jobs:
         run: pnpm install
       - name: Check Prettier
         run: pnpm run prettier:check
+      - name: Install dependencies
+        run: pnpm build
