GH Actions: run graphql codegen

--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -41,7 +41,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
+      - name: Run Codegen
+        run: pnpm run codegen
       - name: Check Prettier
         run: pnpm run prettier:check
-      - name: Install dependencies
+      - name: Build application
         run: pnpm build
