--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3"
 services:
-  publy_db:
+  publy_app_db:
     image: postgres:14.1-alpine
     command: ["postgres", "-c", "log_statement=all"]
-    container_name: publy_db
+    container_name: publy_app_db
     ports:
       - "8432:5432"
     environment:
