--- a/app/publy-frontend/package.json
+++ b/app/publy-frontend/package.json
@@ -13,13 +13,14 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/remarkable": "^2.0.3",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "classnames": "^2.3.1",
     "graphql": "^16.5.0",
     "graphql-ws": "^5.10.0",
     "highlight.js": "^11.6.0",
-    "react-router-dom": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "remarkable": "^2.0.1",
     "typescript": "^4.6.4",
