--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./app/publy-fe
+        working-directory: ./app/publy-frontend
 
     steps:
       - name: Checkout
