--- a/app/publy-frontend/package.json
+++ b/app/publy-frontend/package.json
@@ -32,7 +32,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "codegen": "graphql-codegen --config codegen.yml",
-    "codegen:watch": "graphql-codegen --config codegen.yml --watch src/**/*.graphql"
+    "codegen:watch": "graphql-codegen --config codegen.yml --watch src/**/*.graphql",
+    "prettier:check": "prettier --check src"
   },
   "eslintConfig": {
     "extends": [
