--- a/app/publy-frontend/package.json
+++ b/app/publy-frontend/package.json
@@ -31,7 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "codegen": "graphql-codegen --config codegen.yml",
+    "codegen": "graphql-codegen --config codegen.yml && prettier --write src/generated/**",
     "codegen:watch": "graphql-codegen --config codegen.yml --watch src/**/*.graphql",
     "prettier:check": "prettier --check src"
   },
