--- a/workspace/publy-backend/build.gradle
+++ b/workspace/publy-backend/build.gradle
@@ -41,6 +41,8 @@ dependencies {
   runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
   runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
+  implementation "io.reactivex.rxjava3:rxjava:3.1.5"
+
 }
 
 test {
