--- a/workspace/publy-backend/src/main/resources/application.properties
+++ b/workspace/publy-backend/src/main/resources/application.properties
@@ -20,5 +20,11 @@ logging.level.graphql=INFO
 spring.graphql.graphiql.enabled=true
 spring.graphql.graphiql.path=/
 spring.graphql.websocket.path=/graphql
+
+## -- Publy --
 publy.userservice.url=http://localhost:8091
+
+# Automatisch Dummy Kommentare erzeugen lassen: hier auf true stellen
+publy.dummyContentGenerator.enable-auto=false
+publy.dummyContentGenerator.addCommentRate=1000
 
