--- a/workspace/hello-graphql-java/build.gradle
+++ b/workspace/hello-graphql-java/build.gradle
@@ -36,6 +36,14 @@ group = 'nh.graphql'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+bootJar {
+  enabled = false
+}
+
+jar {
+  enabled = true
+}
+
 repositories {
   mavenCentral()
 }
