--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -56,9 +56,39 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install JDK17
+      - name: Install JDK11
         uses: actions/setup-java@v3
         with:
-          distribution: "temurin" # See 'Supported distributions' for available options
-          java-version: "17"
-      - run: ./gradlew build
+          distribution: 'zulu' # See 'Supported distributions' for available options
+          java-version: '11'
+      - run: ./gradlew build -x :hello-graphql-java:test
+  build-workspace-frontend:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./workspace/publy-frontend
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - uses: pnpm/action-setup@v2.0.1
+        name: Install pnpm
+        id: pnpm-install
+        with:
+          version: 7
+          run_install: false
+
+      - name: Install dependencies
+        run: pnpm install
+      - name: Run Codegen
+        run: pnpm run codegen
+      - name: Check Prettier
+        run: pnpm run prettier:check
+      - name: Build application
+        run: pnpm build
