--- a/app/.graphqlconfig
+++ b/app/.graphqlconfig
@@ -1,8 +1,9 @@
 {
-  "name": "Untitled GraphQL Schema",
+  "name": "Publy App GraphQL Schema",
+  "schemaPath": "./public-backend/src/main/resouces/graphql/**.graphqls",
   "extensions": {
     "endpoints": {
-      "Default GraphQL Endpoint": {
+      "Publy App GraphQL Endpoint": {
         "url": "http://localhost:8080/graphql",
         "headers": {
           "user-agent": "JS GraphQL"
