--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -61,7 +61,47 @@ jobs:
         with:
           distribution: 'zulu' # See 'Supported distributions' for available options
           java-version: '11'
-      - run: ./gradlew build -x :hello-graphql-java:test
+      - run: ./gradlew clean build -x :hello-graphql-java:test
+
+
+
+
+
+  build-workspace-backend-steps:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./workspace
+    strategy:
+      matrix:
+        backend_step:
+          - '00_initial'
+          - '01_schema'
+          - '10_handler-function'
+          - '15_schema-mapping'
+          - '17_mutations'
+          - '18_subscriptions'
+          - '20_dataloader'
+          - '25_batchmapping'
+          - '30_error_handling'
+          - '40_security'
+          - '50_test'
+          - '70_complete'
+      fail-fast: false
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install JDK11
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu' # See 'Supported distributions' for available options
+          java-version: '11'
+      - name: Copy Backend Step ${{ matrix.backend_step }}
+        run: |
+          cp -r ./steps/${{ matrix.backend_step }}/src/ ./publy-backend
+      - name: Build step
+        run: ./gradlew clean build -x :hello-graphql-java:test
+
   build-workspace-frontend:
     runs-on: ubuntu-latest
     defaults:
