--- a/app/publy-backend/build.gradle
+++ b/app/publy-backend/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-  id 'org.springframework.boot' version '2.7.0'
-  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'java'
+  id 'org.springframework.boot' version '3.0.6'
+  id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'nh.graphql.publy'
@@ -10,11 +10,10 @@ sourceCompatibility = '17'
 
 repositories {
   mavenCentral()
-  maven { url 'https://repo.spring.io/milestone' }
 }
 
 ext {
-  set('testcontainersVersion', "1.16.2")
+  set('testcontainersVersion', "1.17.6")
 }
 
 dependencies {
@@ -41,8 +40,6 @@ dependencies {
 
   implementation 'org.commonmark:commonmark:0.18.1'
 
-  // https://github.com/netty/netty/issues/11020#issuecomment-1006120770
-  implementation 'io.netty:netty-resolver-dns-native-macos:4.1.72.Final:osx-aarch_64'
   compileOnly 'org.jetbrains:annotations:20.1.0'
 
   // JWT
@@ -58,6 +55,7 @@ dependencyManagement {
   }
 }
 
-test {
+tasks.named('test') {
   useJUnitPlatform()
 }
+
