--- a/workspace/publy-userservice/build.gradle
+++ b/workspace/publy-userservice/build.gradle
@@ -1,16 +1,17 @@
 plugins {
-  id 'org.springframework.boot' version '2.7.0'
-  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'java'
+  id 'org.springframework.boot' version '3.0.6'
+  id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'nh.graphql.publy'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
 
 repositories {
   mavenCentral()
 }
+
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
