--- a/workspace/steps/00_initial/build.gradle
+++ b/workspace/steps/00_initial/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-  id 'org.springframework.boot' version '2.7.3'
-  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'java'
+  id 'org.springframework.boot' version '3.0.6'
+  id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'nh.graphql.publy'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
 
 repositories {
   mavenCentral()
@@ -41,8 +41,12 @@ dependencies {
   runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
   runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
+  implementation "io.reactivex.rxjava3:rxjava:3.1.5"
+
 }
 
-test {
+
+tasks.named('test') {
   useJUnitPlatform()
 }
+
