--- a/app/publy-backend/src/main/resources/application.properties
+++ b/app/publy-backend/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.level.graphql=INFO
 logging.level.com.github.dockerjava=WARN
 logging.level.org.testcontainers=INFO
 # Set to trace to see request to external UserService
-logging.level.nh.publy.backend.domain.user.UserService=DEBUG
+logging.level.nh.publy.backend.domain.user.RemoteUserServiceClient=DEBUG
 management.endpoints.web.exposure.include=metrics,health
 spring.output.ansi.enabled=always
 spring.graphql.websocket.path=/graphql
