--- a/app/publy-backend/build.gradle
+++ b/app/publy-backend/build.gradle
@@ -28,7 +28,10 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-graphql'
   implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
+  implementation 'org.springframework.boot:spring-boot-starter-actuator'
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+  implementation 'org.flywaydb:flyway-core'
   runtimeOnly 'org.postgresql:postgresql'
 
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
