fly.io deployment

--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -16,6 +16,7 @@ jobs:
           distribution: "temurin" # See 'Supported distributions' for available options
           java-version: "17"
       - run: ./gradlew build
+      - run: ./gradlew :publy-backend:bootBuildImage
 
   app-frontend:
     runs-on: ubuntu-latest
