--- a/app/publy-backend/build.gradle
+++ b/app/publy-backend/build.gradle
@@ -62,3 +62,6 @@ tasks.named('test') {
   useJUnitPlatform()
 }
 
+tasks.named("bootBuildImage") {
+  imageName = "nilshartmann/${project.name}:${project.version}"
+}
