--- a/app/publy-backend/build.gradle
+++ b/app/publy-backend/build.gradle
@@ -64,17 +64,19 @@ tasks.named('test') {
 
 def githubSha = System.getenv('GITHUB_SHA');
 def shortSha = githubSha != null ? githubSha.substring(0, 7) : "local";
-def docker_tag = "ghcr.io/nilshartmann/${project.name}:${shortSha}"
-println(docker_tag)
+def dockerTag = "ghcr.io/nilshartmann/${project.name}:${shortSha}"
+println(dockerTag)
 
 tasks.named("bootBuildImage") {
   imageName = "ghcr.io/nilshartmann/${project.name}:${project.version}"
   tags = [dockerTag]
 
+  // Conntect Package with GitHub Repository
   environment["BP_OCI_SOURCE"] = "https://github.com/nilshartmann/spring-graphql-training"
 
   docker {
     publishRegistry {
+      // Properties set in Github Action file
       username = getProperty('publy_docker_username')
       password = getProperty('publy_docker_secret')
     }
