--- a/workspace/publy-userservice/build.gradle
+++ b/workspace/publy-userservice/build.gradle
@@ -1,15 +1,18 @@
 plugins {
   id 'java'
-  id 'org.springframework.boot' version '3.1.4'
+  id 'org.springframework.boot' version '3.2.0-M3'
   id 'io.spring.dependency-management' version '1.1.3'
 }
 
 group = 'nh.graphql.publy'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+java {
+  sourceCompatibility = '17'
+}
 
 repositories {
   mavenCentral()
+  maven { url 'https://repo.spring.io/milestone' }
 }
 
 
