--- a/workspace/settings.gradle
+++ b/workspace/settings.gradle
@@ -1,3 +1,9 @@
+pluginManagement {
+  repositories {
+    maven { url 'https://repo.spring.io/milestone' }
+    gradlePluginPortal()
+  }
+}
 rootProject.name = 'spring-graphql-training-workspace'
 
 include 'hello-graphql-java'
